# factorialrs

./: Cargo.toml  factorial_cache.json
src/: main.rs
