[package]
name = "facto"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap ={ version = "4.5.6", features = ["derive"] }
# clap_derive = { version = "4.0.0-rc.1" }
clap_derive = "4.5.5"
num = { version = "0.4.3", features = ["num-bigint", "serde", "alloc", "libm", "rand"] }


[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]

# https://youtu.be/voRBS0r4EyI?t=386
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = 'abort'
strip = "symbols"
